l3draw: Note a few pgf point functions to skip [ci skip]

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -58,6 +58,21 @@
 %<@@=draw>
 %    \end{macrocode}
 %
+% This sub-module covers more-or-less the same ideas as
+% \texttt{pgfcorepoints.code.tex}, though the approach taken to returning
+% values is different: point expressions here are processed by expansion
+% and return a co-ordinate pair in the form |{|\meta{x}|}{|\meta{y}|}|.
+% Equivalents of following \pkg{pgf} functions are deliberately omitted:
+% \begin{itemize}
+%   \item \cs{pgfpointorigin}: Can be given explicitly as |{0pt}{0pt}|.
+%   \item \cs{pgfextractx}, \cs{pgfextracty}: Available by applying
+%     \cs{use_i:nn}/\cs{use_ii:nn} or similar to the \texttt{x}-type
+%     expansion of a point expression.
+%    \item \cs{pgfgetlastxy}: Unused in the entire \pkg{pgf} core, may be
+%      emulated by \texttt{x}-type expansion of a point expression, then using
+%      the result.
+% \end{itemize}
+%
 % \subsection{Support functions}
 %
 % \begin{macro}{\@@_point_process:nn}
