More 'for the future' point functions [ci skip]

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -76,7 +76,9 @@
 % are currently absent:
 % \begin{itemize}
 %   \item \cs{pgfpointcylindrical}, \cs{pgfpointspherical}: The usefulness
-%     of these commands is not currently clear
+%     of these commands is not currently clear.
+%   \item \cs{pgfpointborderrectangle}, \cs{pgfpointborderellipse}: To be
+%     revisited once the semantics and use cases are clear.
 %   \item \cs{pgfqpoint}, \cs{pgfqpointscale}, \cs{pgfqpointpolar},
 %     \cs{pgfqpointxy}, \cs{pgfqpointxyz}: The expandable approach taken in
 %     the code here, along with the absolute requirement for \eTeX{}, means
