l3draw: Transformation of points
This is a somewhat different set up to pgf, largely as we can work
expandably. Over time this may change: need to see how things work out.

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -150,6 +150,28 @@
 %   \end{syntax}
 % \end{function}
 %
+% \begin{function}[rEXP]{\draw_point_transform:n}
+%   \begin{syntax}
+%     \cs{draw_point_transform:n} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
+% \subsection{Transformations}
+%
+% \begin{function}{\draw_add_transformcm:nnnnn}
+%   \begin{syntax}
+%     \cs{draw_add_transformcm:nnnnn}
+%       \marg{a} \marg{b} \marg{c} \marg{d} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}{\draw_set_transformcm:nnnnn}
+%   \begin{syntax}
+%     \cs{draw_set_transformcm:nnnnn}
+%       \marg{a} \marg{b} \marg{c} \marg{d} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
