--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -98,9 +98,9 @@
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}{\draw_set_xvec:n, \draw_set_yvec:n, \draw_set_zvec:n}
+% \begin{function}{\draw_\1vec_set:n, \draw_\1vec_set:n, \draw_\1vec_set:n}
 %   \begin{syntax}
-%     \cs{draw_set_xvec:n} \marg{point expr}
+%     \cs{draw_\1vec_set:n} \marg{point expr}
 %   \end{syntax}
 % \end{function}
 %
@@ -158,17 +158,23 @@
 %
 % \subsection{Transformations}
 %
-% \begin{function}{\draw_add_transformcm:nnnnn}
+% \begin{function}{\draw_transform_add:nnnnn}
 %   \begin{syntax}
-%     \cs{draw_add_transformcm:nnnnn}
+%     \cs{draw_transform_add:nnnnn}
 %       \marg{a} \marg{b} \marg{c} \marg{d} \marg{point expr}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}{\draw_set_transformcm:nnnnn}
+% \begin{function}{\draw_transform_set:nnnnn}
 %   \begin{syntax}
-%     \cs{draw_set_transformcm:nnnnn}
+%     \cs{draw_transform_set:nnnnn}
 %       \marg{a} \marg{b} \marg{c} \marg{d} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}{\draw_transform_invert:}
+%   \begin{syntax}
+%     \cs{draw_transform_invert:}
 %   \end{syntax}
 % \end{function}
 %
