l3draw: Add \draw_transform_reset:

--- a/l3trial/l3draw/l3draw-transforms.dtx
+++ b/l3trial/l3draw/l3draw-transforms.dtx
@@ -83,6 +83,24 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{macro}{\draw_transform_reset:}
+%   Fast resetting.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_transform_reset:
+  {
+    \fp_set:Nn \l_@@_transformcm_aa_fp { 1}
+    \fp_zero:N \l_@@_transformcm_ab_fp
+    \fp_zero:N \l_@@_transformcm_ba_fp
+    \fp_set:Nn \l_@@_transformcm_bb_fp { 1 }
+    \dim_zero:N \l_@@_transformcm_xshift_dim
+    \dim_zero:N \l_@@_transformcm_yshift_dim
+  }
+\draw_transform_reset:
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \begin{macro}{\draw_transform_set:nnnnn}
 % \begin{macro}{\@@_transform_set:nnnnnn}
 %   Setting the transform matrix is straight-forward, with just a bit
