--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -158,6 +158,12 @@
 %
 % \subsection{Transformations}
 %
+% \begin{function}{\draw_transform_reset:}
+%   \begin{syntax}
+%     \cs{draw_transform_reset:}
+%   \end{syntax}
+% \end{function
+%
 % \begin{function}{\draw_transform_add:nnnnn}
 %   \begin{syntax}
 %     \cs{draw_transform_add:nnnnn}
