l3draw: Better order for point processing

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -93,7 +93,7 @@
 %   The second argument here should itself absorb two arguments.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_point_process:nn #1#2
-  { \use:x { \exp_not:n {#2} #1 } }
+  { \use:x { \exp_not:n {#1} #2 } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -852,7 +852,7 @@
   { \@@_set_vec:nn { z } {#1} }
 \cs_new_protected:Npn \@@_set_vec:nn #1#2
   {
-    \@@_point_process:nn {#2} { \@@_set_vec:nnn {#1} }
+    \@@_point_process:nn { \@@_set_vec:nnn {#1} } {#2}
   }
 \cs_new_protected:Npn \@@_set_vec:nnn #1#2#3
   {
