--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -156,6 +156,20 @@
 %   \end{syntax}
 % \end{function}
 %
+% \subsection{Paths}
+%
+% \begin{function}{\draw_path_moveto:n}
+%   \begin{syntax}
+%     \cs{draw_path_moveto:n} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}{\draw_path_lineto:n}
+%   \begin{syntax}
+%     \cs{draw_path_lineto:n} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
 % \subsection{Transformations}
 %
 % \begin{function}{\draw_transform_reset:}
