Missing "}" [ci skip]

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -176,7 +176,7 @@
 %   \begin{syntax}
 %     \cs{draw_transform_reset:}
 %   \end{syntax}
-% \end{function
+% \end{function}
 %
 % \begin{function}{\draw_transform_add:nnnnn}
 %   \begin{syntax}
