Make all functions robust against tuples
Previously things like atan((1,2),3) would break horribly; now it
rightfully errors out and cleanly recovers with a nan result

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -468,20 +468,20 @@
 %
 % \subsection{Other floating point types}
 %
-% \begin{macro}{\s_@@_tuple, \@@_chk_tuple:w}
+% \begin{macro}{\s_@@_tuple, \@@_tuple_chk:w}
 % \begin{variable}{\c_@@_empty_tuple_fp}
 %   Floating point tuples take the form \cs{s_@@_tuple}
-%   \cs{@@_chk_tuple:w} |{| \meta{fp 1} \meta{fp 2} \dots |}| |;| where
+%   \cs{@@_tuple_chk:w} |{| \meta{fp 1} \meta{fp 2} \dots |}| |;| where
 %   each \meta{fp} is a floating point number or tuple, hence ends with
-%   |;| itself.  When a tuple is typeset, \cs{@@_chk_tuple:w} produces
+%   |;| itself.  When a tuple is typeset, \cs{@@_tuple_chk:w} produces
 %   an error, just like usual floating point numbers.
 %   Tuples may have zero or one element.
 %    \begin{macrocode}
 \__scan_new:N \s_@@_tuple
-\cs_new_protected:Npn \@@_chk_tuple:w #1 ;
-  { \@@_misused:n { \s_@@_tuple \@@_chk_tuple:w #1 ; } }
+\cs_new_protected:Npn \@@_tuple_chk:w #1 ;
+  { \@@_misused:n { \s_@@_tuple \@@_tuple_chk:w #1 ; } }
 \tl_const:Nn \c_@@_empty_tuple_fp
-  { \s_@@_tuple \@@_chk_tuple:w { } ; }
+  { \s_@@_tuple \@@_tuple_chk:w { } ; }
 %    \end{macrocode}
 % \end{variable}
 % \end{macro}
@@ -494,8 +494,8 @@
 %   with the |\use_none:n #1| construction.
 %    \begin{macrocode}
 \cs_new:Npn \@@_array_count:n #1
-  { \@@_tuple_count:w \s_@@_tuple \@@_chk_tuple:w {#1} ; }
-\cs_new:Npn \@@_tuple_count:w \s_@@_tuple \@@_chk_tuple:w #1 ;
+  { \@@_tuple_count:w \s_@@_tuple \@@_tuple_chk:w {#1} ; }
+\cs_new:Npn \@@_tuple_count:w \s_@@_tuple \@@_tuple_chk:w #1 ;
   {
     \__int_value:w \__int_eval:w 0
       \@@_tuple_count_loop:Nw #1 { ? \__prg_break: } ;
@@ -516,6 +516,24 @@
 %   as that function is used for all floating point operations.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_type_fp:NTwFw #1 \s_@@ #2 #3 \q_stop {#2}
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_array_if_all_fp:nTF, \@@_array_if_all_fp_loop:w}
+%   True if all items are floating point numbers.  Used for |min|.
+%    \begin{macrocode}
+\cs_new:Npn \@@_array_if_all_fp:nTF #1
+  {
+    \@@_array_if_all_fp_loop:w #1 { \s_@@ \__prg_break: } ;
+    \__prg_break_point: \use_i:nn
+  }
+\cs_new:Npn \@@_array_if_all_fp_loop:w #1#2 ;
+  {
+    \@@_if_type_fp:NTwFw
+      #1 \@@_array_if_all_fp_loop:w
+      \s_@@ { \__prg_break:n \use_iii:nnn }
+      \q_stop
+  }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -546,6 +564,43 @@
       {##2}
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_change_func_type:NNN}
+% \begin{macro}[EXP]{\@@_change_func_type_aux:w, \@@_change_func_type_chk:NNN}
+%   Arguments are \meta{type marker} \meta{function} \meta{recovery}.
+%   This gives the function obtained by placing the type after |@@|.  If
+%   the function is not defined then \meta{recovery} \meta{function} is
+%   used instead; however that test is not run when the \meta{type
+%   marker} is \cs{s_@@}.
+%    \begin{macrocode}
+\cs_new:Npn \@@_change_func_type:NNN #1#2#3
+  {
+    \@@_if_type_fp:NTwFw
+      #1 #2
+      \s_@@
+        {
+          \exp_after:wN \@@_change_func_type_chk:NNN
+          \cs:w
+            @@ \@@_type_from_scan_other:N #1
+            \exp_after:wN \@@_change_func_type_aux:w \token_to_str:N #2
+          \cs_end:
+          #2 #3
+        }
+      \q_stop
+  }
+\exp_last_unbraced:NNNNo
+  \cs_new:Npn \@@_change_func_type_aux:w #1 { \tl_to_str:n { @@ } } { }
+\cs_new:Npn \@@_change_func_type_chk:NNN #1#2#3
+  {
+    \if_meaning:w \scan_stop: #1
+      \exp_after:wN #3 \exp_after:wN #2
+    \else:
+      \exp_after:wN #1
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_exp_after_any_f:Nnw, \@@_exp_after_any_f:nw}
@@ -587,10 +642,10 @@
 %       \cs{s_@@_stop}
 %   \end{quote}
 %    \begin{macrocode}
-\cs_new:Npn \@@_exp_after_tuple_f:nw #1 \s_@@_tuple \@@_chk_tuple:w #2 ;
+\cs_new:Npn \@@_exp_after_tuple_f:nw #1 \s_@@_tuple \@@_tuple_chk:w #2 ;
   {
     \exp_after:wN \s_@@_tuple
-    \exp_after:wN \@@_chk_tuple:w
+    \exp_after:wN \@@_tuple_chk:w
     \exp_after:wN {
       \exp:w \exp_end_continue_f:w
       \@@_exp_after_array_f:w #2 \s_@@_stop
@@ -1175,7 +1230,7 @@
   { \exp_last_unbraced:Nf \@@_func_to_name_aux:w { \cs_to_str:N #1 } X }
 \cs_set_protected:Npn \@@_tmp:w #1 #2
   { \cs_new:Npn \@@_func_to_name_aux:w ##1 #1 ##2 #2 ##3 X {##2} }
-\exp_args:Nff \@@_tmp:w { \tl_to_str:n { @@_ } } { \tl_to_str:n { _o:w } }
+\exp_args:Nff \@@_tmp:w { \tl_to_str:n { @@_ } } { \tl_to_str:n { _o: } }
 %    \end{macrocode}
 % \end{macro}
 %
