--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -329,7 +329,7 @@
   }
 \cs_new:Npn \@@_to_tl_other:w #1
   { \cs:w @@ \@@_type_from_scan_other:N #1 _to_tl:w \cs_end: #1 }
-\cs_new:Npn \@@_tuple_to_tl:w \s_@@_tuple \@@_chk_tuple:w #1 ;
+\cs_new:Npn \@@_tuple_to_tl:w \s_@@_tuple \@@_tuple_chk:w #1 ;
   {
     \int_case:nnF { \@@_array_count:n {#1} }
       {
