--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-logic.dtx Copyright (C) 2011-2017 The LaTeX3 Project
+%% File: l3fp-logic.dtx Copyright (C) 2011-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -418,7 +418,8 @@
 %
 % \subsection{Extrema}
 %
-% \begin{macro}[EXP]{\@@_minmax_o:Nw}
+% \begin{macro}[EXP]{\@@_minmax_o:Nw, \@@_minmax_aux_o:Nw}
+%   First check all operands are floating point numbers.
 %   The argument~|#1| is $2$~to find the maximum of an array~|#2| of
 %   floating point numbers, and $0$~to find the minimum.  We read
 %   numbers sequentially, keeping track of the largest (smallest) number
@@ -430,7 +431,13 @@
 %   fp-like trailing marker breaks the loop correctly: see the precise
 %   definition of \cs{@@_minmax_loop:Nww}.
 %    \begin{macrocode}
-\cs_new:Npn \@@_minmax_o:Nw #1#2 @
+\cs_new:Npn \@@_minmax_o:Nw #1
+  {
+    \@@_parse_function_all_fp_o:fnw
+      { \token_if_eq_meaning:NNTF 0 #1 { min } { max } }
+      { \@@_minmax_aux_o:Nw #1 }
+  }
+\cs_new:Npn \@@_minmax_aux_o:Nw #1#2 @
   {
     \if_meaning:w 0 #1
       \exp_after:wN \@@_minmax_loop:Nww \exp_after:wN +
