--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-random.dtx Copyright (C) 2016,2017 The LaTeX3 Project
+%% File: l3fp-random.dtx Copyright (C) 2016-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -213,8 +213,9 @@
 % \begin{macro}[EXP]{\@@_randint_o:Nw}
 % \begin{macro}[EXP]
 %   {
+%     \@@_randint_default:w,
 %     \@@_randint_badarg:w,
-%     \@@_randint_e:w,
+%     \@@_randint_o:w,
 %     \@@_randint_e:wnn,
 %     \@@_randint_e:wwNnn,
 %     \@@_randint_e:wwwNnn,
@@ -243,19 +244,13 @@
 %     bound.  The result is compared to the upper bound and the process
 %     repeats if needed.
 %    \begin{macrocode}
-\cs_new:Npn \@@_randint_o:Nw ? #1 @
+\cs_new:Npn \@@_randint_o:Nw ?
   {
-    \if_case:w
-      \__int_eval:w \@@_array_count:n {#1} - 1 \__int_eval_end:
-         \exp_after:wN \@@_randint_e:w \c_one_fp #1
-    \or: \@@_randint_e:w #1
-    \else:
-      \__kernel_msg_expandable_error:nnnnn
-        { kernel } { fp-num-args } { randint() } { 1 } { 2 }
-      \exp_after:wN \c_nan_fp \exp:w
-    \fi:
-    \exp_after:wN \exp_end:
+    \@@_parse_function_one_two:nnw
+      { randint }
+      { \@@_randint_default:w \@@_randint_o:w }
   }
+\cs_new:Npn \@@_randint_default:w #1 { \exp_after:wN #1 \c_one_fp }
 \cs_new:Npn \@@_randint_badarg:w \s_@@ \@@_chk:w #1#2#3;
   {
     \@@_int:wTF \s_@@ \@@_chk:w #1#2#3;
@@ -269,7 +264,7 @@
       }
       { 1 \exp_stop_f: }
   }
-\cs_new:Npn \@@_randint_e:w #1; #2;
+\cs_new:Npn \@@_randint_o:w #1; #2; @
   {
     \if_case:w
         \@@_randint_badarg:w #1;
@@ -282,6 +277,7 @@
         { randint } { \@@_array_to_clist:n { #1; #2; } }
       \exp:w
     \fi:
+    \exp_after:wN \exp_end:
   }
 \cs_new:Npn \@@_randint_e:wnn #1;
   {
