--- a/l3kernel/l3fp-basics.dtx
+++ b/l3kernel/l3fp-basics.dtx
@@ -2085,7 +2085,7 @@
     \@@_invalid_operation_o:nw { abs }
   }
 \cs_new:Npn \@@_tuple_set_sign_aux_o:Nnw #1#2#3 @
-  { \@@_tuple_map_o:Nw \@@_tuple_set_sign_aux_o:w #3 }
+  { \@@_tuple_map_o:nw \@@_tuple_set_sign_aux_o:w #3 }
 \cs_new:Npn \@@_tuple_set_sign_aux_o:w #1#2 ;
   {
     \@@_change_func_type:NNN #1 \@@_set_sign_o:w
@@ -2096,51 +2096,44 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\@@_*_tuple_o:ww, \@@_tuple_*_o:ww, \@@_tuple_/_o:ww}
+%   For \meta{number}|*|\meta{tuple} and \meta{tuple}|*|\meta{number}
+%   and \meta{tuple}|/|\meta{number}, loop through the \meta{tuple} some
+%   code that multiplies or divides by the appropriate \meta{number}.
+%   Importantly we need to dispatch according to the type, and we make
+%   sure to apply the operator in the correct order.
+%    \begin{macrocode}
+\cs_new:cpn { @@_*_tuple_o:ww } #1 ;
+  { \@@_tuple_map_o:nw { \@@_binary_type_o:Nww * #1 ; } }
+\cs_new:cpn { @@_tuple_*_o:ww } #1 ; #2 ;
+  { \@@_tuple_map_o:nw { \@@_binary_rev_type_o:Nww * #2 ; } #1 ; }
+\cs_new:cpn { @@_tuple_/_o:ww } #1 ; #2 ;
+  { \@@_tuple_map_o:nw { \@@_binary_rev_type_o:Nww / #2 ; } #1 ; }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\@@_tuple_+_tuple_o:ww, \@@_tuple_-_tuple_o:ww}
-% \begin{macro}[EXP]{\@@_add_tuple_aux_o:ww, \@@_sub_tuple_aux_o:ww}
-% \begin{macro}[EXP]{\@@_add_tuple_aux_o:Nww}
 %   Check the two tuples have the same number of items and map through
 %   these a helper that dispatches appropriately depending on the types.
 %   This means |(1,2)+((1,1),2)| gives |(nan,4)|.
 %    \begin{macrocode}
-\cs_set_protected:Npn \@@_tmp:w #1#2
+\cs_set_protected:Npn \@@_tmp:w #1
   {
     \cs_new:cpn { @@_tuple_#1_tuple_o:ww }
         \s_@@_tuple \@@_tuple_chk:w ##1 ;
         \s_@@_tuple \@@_tuple_chk:w ##2 ;
       {
-        \if_int_compare:w
-            \@@_array_count:n {##1} = \@@_array_count:n {##2} \exp_stop_f:
-          \exp_after:wN \@@_tuple_mapthread_o:Nww
-          \exp_after:wN #2
-        \else:
-          \exp_after:wN \@@_invalid_operation_o:Nww
-          \exp_after:wN #1
-        \fi:
+        \int_compare:nNnTF
+          { \@@_array_count:n {##1} } = { \@@_array_count:n {##2} }
+          { \@@_tuple_mapthread_o:nww { \@@_binary_type_o:Nww #1 } }
+          { \@@_invalid_operation_o:nww #1 }
         \s_@@_tuple \@@_tuple_chk:w {##1} ;
         \s_@@_tuple \@@_tuple_chk:w {##2} ;
       }
   }
-\@@_tmp:w + \@@_add_tuple_aux_o:ww
-\@@_tmp:w - \@@_sub_tuple_aux_o:ww
-\cs_new:Npn \@@_add_tuple_aux_o:ww { \@@_add_tuple_aux_o:Nww + }
-\cs_new:Npn \@@_sub_tuple_aux_o:ww { \@@_add_tuple_aux_o:Nww - }
-\cs_new:Npn \@@_add_tuple_aux_o:Nww #1 #2#3 ; #4#5 ;
-  {
-    \exp_after:wN \@@_parse_apply_binary_chk:NN
-      \cs:w
-        @@
-        \@@_type_from_scan:N #2
-        _ #1
-        \@@_type_from_scan:N #4
-        _o:ww
-      \cs_end:
-      #1
-    #2 #3 ; #4 #5 ;
-  }
+\@@_tmp:w +
+\@@_tmp:w -
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
