Fixup l3trial/l3fp-extras after recent changes to l3fp
This is mostly deleting code that's now in l3fp

--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -334,20 +334,20 @@
 %
 % \begin{macro}[EXP, aux]
 %   {
-%     \@@_acos_symbolic_o:w     ,
-%     \@@_acsc_symbolic_o:w     ,
-%     \@@_asec_symbolic_o:w     ,
-%     \@@_asin_symbolic_o:w     ,
-%     \@@_cos_symbolic_o:w      ,
-%     \@@_cot_symbolic_o:w      ,
-%     \@@_csc_symbolic_o:w      ,
-%     \@@_exp_symbolic_o:w      ,
-%     \@@_ln_symbolic_o:w       ,
-%     \@@_not_symbolic_o:w      ,
-%     \@@_sec_symbolic_o:w      ,
-%     \@@_set_sign_symbolic_o:w ,
-%     \@@_sin_symbolic_o:w      ,
-%     \@@_tan_symbolic_o:w      ,
+%     \@@_symbolic_acos_o:w     ,
+%     \@@_symbolic_acsc_o:w     ,
+%     \@@_symbolic_asec_o:w     ,
+%     \@@_symbolic_asin_o:w     ,
+%     \@@_symbolic_cos_o:w      ,
+%     \@@_symbolic_cot_o:w      ,
+%     \@@_symbolic_csc_o:w      ,
+%     \@@_symbolic_exp_o:w      ,
+%     \@@_symbolic_ln_o:w       ,
+%     \@@_symbolic_not_o:w      ,
+%     \@@_symbolic_sec_o:w      ,
+%     \@@_symbolic_set_sign_o:w ,
+%     \@@_symbolic_sin_o:w      ,
+%     \@@_symbolic_tan_o:w      ,
 %   }
 %    \begin{macrocode}
 \tl_map_inline:nn
@@ -356,7 +356,7 @@
     {not} {sec} {set_sign} {sin} {sqrt} {tan}
   }
   {
-    \cs_new_nopar:cpx { @@_#1_symbolic_o:w }
+    \cs_new_nopar:cpx { @@_symbolic_#1_o:w }
       {
         \exp_not:N \@@_symbolic_unary_o:NNw
         \exp_not:c { @@_#1_o:w }
