Use new tuple support in l3draw transforms

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -193,14 +193,14 @@
 % \begin{function}{\draw_transform_add:nnnnn}
 %   \begin{syntax}
 %     \cs{draw_transform_add:nnnnn}
-%       \marg{a} \marg{b} \marg{c} \marg{d} \marg{point expr}
+%       \marg{a} \marg{b} \marg{c} \marg{d} \marg{coord expr}
 %   \end{syntax}
 % \end{function}
 %
 % \begin{function}{\draw_transform_set:nnnnn}
 %   \begin{syntax}
 %     \cs{draw_transform_set:nnnnn}
-%       \marg{a} \marg{b} \marg{c} \marg{d} \marg{point expr}
+%       \marg{a} \marg{b} \marg{c} \marg{d} \marg{coord expr}
 %   \end{syntax}
 % \end{function}
 %
