l3draw: Rename some functions
With the new tuple support in l3fp, "coord" seems wrong here.

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -128,10 +128,10 @@
 %
 % The most basic way of giving points is as simple $(x,y)$ co-ordinates.
 %
-% \begin{macro}[rEXP]{\draw_point_coord:nn}
+% \begin{macro}[rEXP]{\draw_point:nn}
 %   Simply turn the given values into dimensions.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_coord:nn #1#2
+\cs_new:Npn \draw_point:nn #1#2
   {
     { \fp_to_dim:n {#1} }
     { \fp_to_dim:n {#2} }
@@ -871,16 +871,16 @@
 \draw_zvec_set:n { { -0.385cm } { -0.385cm } }
 %    \end{macrocode}
 %
-% \begin{macro}[rEXP]{\draw_point_vec_coord:nn}
-% \begin{macro}[rEXP]{\@@_point_vec_coord:nn, \@@_point_vec_coord:ff}
-% \begin{macro}[rEXP]{\draw_point_vec_coord:nnn}
-% \begin{macro}[rEXP]{\@@_point_vec_coord:nnn, \@@_point_vec_coord:fff}
+% \begin{macro}[rEXP]{\draw_point_vec:nn}
+% \begin{macro}[rEXP]{\@@_point_vec:nn, \@@_point_vec:ff}
+% \begin{macro}[rEXP]{\draw_point_vec:nnn}
+% \begin{macro}[rEXP]{\@@_point_vec:nnn, \@@_point_vec:fff}
 %   Force a single evaluation of each factor, then use these to work out the
 %   underlying point.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_vec_coord:nn #1#2
-  { \@@_point_vec_coord:ff { \fp_eval:n {#1} } { \fp_eval:n {#2} } }
-\cs_new:Npn \@@_point_vec_coord:nn #1#2
+\cs_new:Npn \draw_point_vec:nn #1#2
+  { \@@_point_vec:ff { \fp_eval:n {#1} } { \fp_eval:n {#2} } }
+\cs_new:Npn \@@_point_vec:nn #1#2
   {
     {
       \fp_to_dim:n
@@ -891,13 +891,13 @@
         { #1 * \l_@@_xvec_y_dim + #2 * \l_@@_yvec_y_dim }
     }
   }
-\cs_generate_variant:Nn \@@_point_vec_coord:nn { ff }
-\cs_new:Npn \draw_point_vec_coord:nnn #1#2#3
+\cs_generate_variant:Nn \@@_point_vec:nn { ff }
+\cs_new:Npn \draw_point_vec:nnn #1#2#3
   {
-    \@@_point_vec_coord:fff
+    \@@_point_vec:fff
       { \fp_eval:n {#1} } { \fp_eval:n {#2} } { \fp_eval:n {#3} }
   }
-\cs_new:Npn \@@_point_vec_coord:nnn #1#2#3
+\cs_new:Npn \@@_point_vec:nnn #1#2#3
   {
     {
       \fp_to_dim:n
@@ -916,7 +916,7 @@
         }
     }
   }
-\cs_generate_variant:Nn \@@_point_vec_coord:nnn { fff }
+\cs_generate_variant:Nn \@@_point_vec:nnn { fff }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
