--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -62,9 +62,9 @@
 %
 % \subsection{Points}
 %
-% \begin{function}[rEXP]{\draw_point_coord:nn}
+% \begin{function}[rEXP]{\draw_point:nn}
 %   \begin{syntax}
-%     \cs{draw_point_coord:nn} \marg{x} \marg{y}
+%     \cs{draw_point:nn} \marg{x} \marg{y}
 %   \end{syntax}
 % \end{function}
 %
@@ -104,10 +104,10 @@
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[rEXP]{\draw_point_vec_coord:nn, \draw_point_vec_coord:nnn}
+% \begin{function}[rEXP]{\draw_point_vec:nn, \draw_point_vec:nnn}
 %   \begin{syntax}
-%     \cs{draw_point_vec_coord:nn} \marg{xscale} \marg{yscale}
-%     \cs{draw_point_vec_coord:nnn} \marg{xscale} \marg{yscale} \marg{zscale}
+%     \cs{draw_point_vec:nn} \marg{xscale} \marg{yscale}
+%     \cs{draw_point_vec:nnn} \marg{xscale} \marg{yscale} \marg{zscale}
 %   \end{syntax}
 % \end{function}
 %
